# iwi

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  cliff.toml  deny.toml  docker-compose.yml  rustfmt.toml  typos.toml
.github/workflows/: integration.yml  release.yml
fixtures/: account.sql  config.toml  config_example.toml
migrations/: 20240430025923_types.down.sql  20240430025923_types.up.sql  20240507024041_id_generator.down.sql  20240507024041_id_generator.up.sql  20240507030139_update_at.down.sql  20240507030139_update_at.up.sql  20240507030323_accounts.down.sql  20240507030323_accounts.up.sql
resources/: iwi.service
src/: lib.rs  main.rs
src/admin/: mod.rs
src/app/: mod.rs
src/app/api/: mod.rs
src/app/api/controller/: common.rs  mod.rs
src/app/api/controller/v1/: account.rs
src/app/api/middleware/: auth.rs  basic_auth.rs  cors.rs  log.rs  mod.rs  req_id.rs
src/app/api/route/: mod.rs
src/app/bootstrap/: constants.rs  mod.rs
src/app/entity/: account.rs  common.rs  mod.rs
src/app/service/: jwt_service.rs  message_queue.rs  mod.rs
src/cmd/: cli.rs  mod.rs
src/macros/: mod.rs
src/models/: account.rs  types.rs
